Loading variables from localrc

--- a/templates/default-unicorn.erb
+++ b/templates/default-unicorn.erb
@@ -16,3 +16,9 @@ PIDFILE="<%= @pidfile %>"
 
 export RAILS_ENV="$ENV"
 export RACK_ENV="$ENV"
+
+# use .localrc for SUPER SECRET STUFF that you don't in a repo
+if [[ -a /home/simpleweb/.localrc ]]
+then
+  source /home/simpleweb/.localrc
+fi
