--- a/templates/default-unicorn.erb
+++ b/templates/default-unicorn.erb
@@ -14,6 +14,9 @@ NAME="<%= @name %>"
 ENV="<%= @rack_env %>"
 PIDFILE="<%= @pidfile %>"
 
+USER="<%= @user %>"
+GROUP="<%= @group %>"
+
 export RAILS_ENV="$ENV"
 export RACK_ENV="$ENV"
 
