--- a/templates/init-unicorn.erb
+++ b/templates/init-unicorn.erb
@@ -26,7 +26,7 @@ RETVAL=0
 
 start() {
     log_daemon_msg "Starting Unicorn server" "unicorn_<%= @name %>"
-    start-stop-daemon --start --quiet --oknodo --user "${USER:-root}" --pidfile $PIDFILE --chdir $APPROOT --startas $DAEMON -- $DAEMON_OPTS
+    start-stop-daemon --start --quiet --oknodo --user "${USER:-root}" --group "${GROUP:-root}" --pidfile $PIDFILE --chdir $APPROOT --startas $DAEMON -- $DAEMON_OPTS
     RETVAL=$?
     log_end_msg $RETVAL
 }
